--- a/_posts/python/ternary-scatter-contour/2015-06-30-ternary-scatter-contour.html
+++ b/_posts/python/ternary-scatter-contour/2015-06-30-ternary-scatter-contour.html
@@ -1,6 +1,6 @@
 ---
-permalink: python/ternary-scatter-contour/
-description: How to make a scatter plot overlaid on ternary contour in Python with Plotly.
+permalink: python/ternary-scatter-contour
+description: How to make A scatter plot overlaid on ternary contour in Python with Plotly.
 title: Python Ternary Scatter Overlaid on Contour | plotly
 has_thumbnail: true
 thumbnail: thumbnail/ternary-scatter-contour.jpg
@@ -134,7 +134,7 @@ order: 1
 
 
 <span class="c">#Example:</span>
-<span class="k">print</span> <span class="n">clean_data</span><span class="p">({</span><span class="s">&#39;L1&#39;</span><span class="p">:</span> <span class="p">[</span><span class="s">&#39;.03 0.5 0.47&#39;</span><span class="p">,</span><span class="s">&#39;0.4 0.5 0.1&#39;</span><span class="p">]})</span>
+<span class="k">print</span> <span class="n">clean_data</span><span class="p">({</span><span class="s">&#39;L1&#39;</span><span class="p">:</span> <span class="p">[</span><span class="s">&#39;.03 0.5 0.47&#39;</span><span class="p">,</span><span class="s">&#39;0.4 0.5 0.1&#39;</span><span class="p">]})</span>    
 </pre></div>
 
 </div>
@@ -414,6 +414,34 @@ order: 1
 </pre></div>
 
 </div>
+</div>
+</div>
+
+</div>
+<div class="cell border-box-sizing code_cell rendered">
+<div class="input">
+<div class="prompt input_prompt">In&nbsp;[26]:</div>
+<div class="inner_cell">
+    <div class="input_area">
+<div class=" highlight hl-ipython2"><pre><span class="n">py</span><span class="o">.</span><span class="n">iplot</span><span class="p">(</span><span class="n">figure</span><span class="p">)</span>
+</pre></div>
+
+</div>
+</div>
+</div>
+
+<div class="output_wrapper">
+<div class="output">
+
+
+<div class="output_area"><div class="prompt output_prompt">Out[26]:</div>
+
+<div class="output_html rendered_html output_subarea output_execute_result">
+<iframe id="igraph" scrolling="no" style="border:none;" seamless="seamless" src="https://plot.ly/~tarzzz/2277.embed" height="525px" width="100%"></iframe>
+</div>
+
+</div>
+
 </div>
 </div>
 
