updating publisher parameters

--- a/_posts/user_guide_python/2015-06-30-geo-streaming.html
+++ b/_posts/user_guide_python/2015-06-30-geo-streaming.html
@@ -1,13 +1,13 @@
 ---
 permalink: python/geo-streaming/
-description: Getting Started with Plotly Streaming
+description: Streaming in Plotly with Python
 title: Streaming to a Map
 has_thumbnail: true
 thumbnail: 
 layout: user-guide
-name: Geo-Streaming
+name: Streaming to Maps
 language: python
-title: Geo-Streaming in Plotly
+title: Geo-Streaming with Plotly
 has_thumbnail: false
 page_type: u-guide
 ---
