--- a/_posts/user_guide_python/2015-06-30-multiple-trace-streaming.html
+++ b/_posts/user_guide_python/2015-06-30-multiple-trace-streaming.html
@@ -1,13 +1,13 @@
 ---
 permalink: python/multiple-trace-streaming/
-description: Getting Started with Plotly Streaming
+description: Streaming in Plotly with Python
 title: Streaming to Two Traces
 has_thumbnail: true
 thumbnail: 
 layout: user-guide
 name: Streaming to Multiple Traces
 language: python
-title: Getting Started with Plotly Streaming
+title: Streaming to Multiple Traces with Plotly
 has_thumbnail: false
 page_type: u-guide
 ---
