--- a/_posts/user_guide_python/2015-06-30-subplot-streaming.html
+++ b/_posts/user_guide_python/2015-06-30-subplot-streaming.html
@@ -1,13 +1,13 @@
 ---
 permalink: python/subplot-streaming/
-description: Getting Started with Plotly Streaming
-title: Streaming Two Types of Plots
+description: Streaming in Plotly with Python
+title: Streaming in Plotly
 has_thumbnail: true
 thumbnail: 
 layout: user-guide
 name: Streaming with Subplots
 language: python
-title: Streaming in Subplots
+title: Streaming in Subplots with Plotly
 has_thumbnail: false
 page_type: u-guide
 ---
