--- a/_posts/python/ternary-scatter-contour/2015-06-30-ternary-scatter-contour.html
+++ b/_posts/python/ternary-scatter-contour/2015-06-30-ternary-scatter-contour.html
@@ -7,7 +7,7 @@ thumbnail: thumbnail/ternary-scatter-contour.jpg
 layout: user-guide
 name: Ternary Scatter Overlaid on Contour
 language: python
-display_as: chart_type
+display_as: scientific
 has_thumbnail: true
 page_type: example_index
 order: 11
