Minor update on ternary-scatter-contour-plot

--- a/_posts/python/ternary-scatter-contour/2015-06-30-ternary-scatter-contour.html
+++ b/_posts/python/ternary-scatter-contour/2015-06-30-ternary-scatter-contour.html
@@ -1,16 +1,16 @@
 ---
-permalink: python/ternary-scatter-contour/
+permalink: python/ternary-overlay/
 description: How to make A scatter plot overlaid on ternary contour in Python with Plotly.
 title: Python Ternary Scatter Overlaid on Contour | plotly
 has_thumbnail: true
 thumbnail: thumbnail/ternary-scatter-contour.jpg
 layout: user-guide
-name: Ternary Scatter Overlaid on Contour
+name: Ternary Overlay Plots
 language: python
 display_as: scientific
 has_thumbnail: true
 page_type: example_index
-order: 11
+order: 10
 ---
 {% raw %}
 <div class="cell border-box-sizing text_cell rendered">
