--- a/_posts/python/range-slider/2015-06-30-range-slider.html
+++ b/_posts/python/range-slider/2015-06-30-range-slider.html
@@ -18,16 +18,7 @@ order: 9
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<h1 id="Range-Sliders-and-Selectors-in-Python">Range Sliders and Selectors in Python<a class="anchor-link" href="#Range-Sliders-and-Selectors-in-Python">&#182;</a></h1>
-</div>
-</div>
-</div>
-<div class="cell border-box-sizing text_cell rendered">
-<div class="prompt input_prompt">
-</div>
-<div class="inner_cell">
-<div class="text_cell_render border-box-sizing rendered_html">
-<p>Now you can implement range sliders and range selectors in your Plotly graphs with python!!!<br></p>
+<p>Now you can implement range sliders and selectors in your Plotly graphs with <b>python</b>!!!<br></p>
 
 </div>
 </div>
@@ -46,7 +37,7 @@ Find your api_key here: <a href="https://plot.ly/settings/api">https://plot.ly/s
 </div>
 <div class="cell border-box-sizing code_cell rendered">
 <div class="input">
-<div class="prompt input_prompt">In&nbsp;[2]:</div>
+<div class="prompt input_prompt">In&nbsp;[1]:</div>
 <div class="inner_cell">
     <div class="input_area">
 <div class=" highlight hl-ipython2"><pre><span class="kn">import</span> <span class="nn">plotly</span>
@@ -64,11 +55,11 @@ Find your api_key here: <a href="https://plot.ly/settings/api">https://plot.ly/s
 <div class="output">
 
 
-<div class="output_area"><div class="prompt output_prompt">Out[2]:</div>
+<div class="output_area"><div class="prompt output_prompt">Out[1]:</div>
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&apos;1.9.7&apos;</pre>
+<pre>&apos;1.9.10&apos;</pre>
 </div>
 
 </div>
@@ -114,25 +105,6 @@ Run  <code>pip install plotly --upgrade</code> to update your Plotly version</p>
 </div>
 </div>
 
-<div class="output_wrapper">
-<div class="output">
-
-
-<div class="output_area"><div class="prompt"></div>
-<div class="output_subarea output_stream output_stderr output_text">
-<pre>/Library/Frameworks/Python.framework/Versions/2.7/lib/python2.7/site-packages/pandas/io/data.py:35: FutureWarning:
-
-
-The pandas.io.data module is moved to a separate package (pandas-datareader) and will be removed from pandas in a future version.
-After installing the pandas-datareader package (https://github.com/pydata/pandas-datareader), you can change the import &#96;&#96;from pandas.io import data, wb&#96;&#96; to &#96;&#96;from pandas_datareader import data, wb&#96;&#96;.
-
-</pre>
-</div>
-</div>
-
-</div>
-</div>
-
 </div>
 <div class="cell border-box-sizing text_cell rendered">
 <div class="prompt input_prompt">
@@ -142,4 +114,67 @@ After installing the pandas-datareader package (https://github.com/pydata/pandas
 <h5 id="Create-a-Graph-with-Range-Selectors-and-a-Range-Slider">Create a Graph with Range Selectors and a Range Slider<a class="anchor-link" href="#Create-a-Graph-with-Range-Selectors-and-a-Range-Slider">&#182;</a></h5>
 </div>
 </div>
+</div>
+<div class="cell border-box-sizing code_cell rendered">
+<div class="input">
+<div class="prompt input_prompt">In&nbsp;[4]:</div>
+<div class="inner_cell">
+    <div class="input_area">
+<div class=" highlight hl-ipython2"><pre><span class="n">trace</span> <span class="o">=</span> <span class="n">go</span><span class="o">.</span><span class="n">Scatter</span><span class="p">(</span><span class="n">x</span><span class="o">=</span><span class="n">df</span><span class="o">.</span><span class="n">index</span><span class="p">,</span>
+                   <span class="n">y</span><span class="o">=</span><span class="n">df</span><span class="o">.</span><span class="n">High</span><span class="p">)</span>
+
+<span class="n">data</span> <span class="o">=</span> <span class="p">[</span><span class="n">trace</span><span class="p">]</span>
+
+<span class="n">layout</span> <span class="o">=</span> <span class="nb">dict</span><span class="p">(</span>
+    <span class="n">title</span><span class="o">=</span><span class="s">&#39;Time series with range slider and selectors&#39;</span><span class="p">,</span>
+    <span class="n">xaxis</span><span class="o">=</span><span class="nb">dict</span><span class="p">(</span>
+        <span class="n">rangeselector</span><span class="o">=</span><span class="nb">dict</span><span class="p">(</span>
+            <span class="n">buttons</span><span class="o">=</span><span class="nb">list</span><span class="p">([</span>
+                <span class="nb">dict</span><span class="p">(</span><span class="n">count</span><span class="o">=</span><span class="mi">1</span><span class="p">,</span>
+                     <span class="n">label</span><span class="o">=</span><span class="s">&#39;1m&#39;</span><span class="p">,</span>
+                     <span class="n">step</span><span class="o">=</span><span class="s">&#39;month&#39;</span><span class="p">,</span>
+                     <span class="n">stepmode</span><span class="o">=</span><span class="s">&#39;backward&#39;</span><span class="p">),</span>
+                <span class="nb">dict</span><span class="p">(</span><span class="n">count</span><span class="o">=</span><span class="mi">6</span><span class="p">,</span>
+                     <span class="n">label</span><span class="o">=</span><span class="s">&#39;6m&#39;</span><span class="p">,</span>
+                     <span class="n">step</span><span class="o">=</span><span class="s">&#39;month&#39;</span><span class="p">,</span>
+                     <span class="n">stepmode</span><span class="o">=</span><span class="s">&#39;backward&#39;</span><span class="p">),</span>
+                <span class="nb">dict</span><span class="p">(</span><span class="n">count</span><span class="o">=</span><span class="mi">1</span><span class="p">,</span>
+                    <span class="n">label</span><span class="o">=</span><span class="s">&#39;YTD&#39;</span><span class="p">,</span>
+                    <span class="n">step</span><span class="o">=</span><span class="s">&#39;year&#39;</span><span class="p">,</span>
+                    <span class="n">stepmode</span><span class="o">=</span><span class="s">&#39;todate&#39;</span><span class="p">),</span>
+                <span class="nb">dict</span><span class="p">(</span><span class="n">count</span><span class="o">=</span><span class="mi">1</span><span class="p">,</span>
+                    <span class="n">label</span><span class="o">=</span><span class="s">&#39;1y&#39;</span><span class="p">,</span>
+                    <span class="n">step</span><span class="o">=</span><span class="s">&#39;year&#39;</span><span class="p">,</span>
+                    <span class="n">stepmode</span><span class="o">=</span><span class="s">&#39;backward&#39;</span><span class="p">),</span>
+                <span class="nb">dict</span><span class="p">(</span><span class="n">step</span><span class="o">=</span><span class="s">&#39;all&#39;</span><span class="p">)</span>
+            <span class="p">])</span>
+        <span class="p">),</span>
+        <span class="n">rangeslider</span><span class="o">=</span><span class="nb">dict</span><span class="p">(),</span>
+        <span class="nb">type</span><span class="o">=</span><span class="s">&#39;date&#39;</span>
+    <span class="p">)</span>
+<span class="p">)</span>
+
+<span class="n">fig</span> <span class="o">=</span> <span class="nb">dict</span><span class="p">(</span><span class="n">data</span><span class="o">=</span><span class="n">data</span><span class="p">,</span> <span class="n">layout</span><span class="o">=</span><span class="n">layout</span><span class="p">)</span>
+<span class="n">py</span><span class="o">.</span><span class="n">iplot</span><span class="p">(</span><span class="n">fig</span><span class="p">)</span>
+</pre></div>
+
+</div>
+</div>
+</div>
+
+<div class="output_wrapper">
+<div class="output">
+
+
+<div class="output_area"><div class="prompt output_prompt">Out[4]:</div>
+
+<div class="output_html rendered_html output_subarea output_execute_result">
+<iframe id="igraph" scrolling="no" style="border:none;" seamless="seamless" src="https://plot.ly/~chelsea_lyn/11579.embed" height="525px" width="100%"></iframe>
+</div>
+
+</div>
+
+</div>
+</div>
+
 </div>{% endraw %}
