range slider title edit

--- a/_posts/python/range-slider/2015-06-30-range-slider.html
+++ b/_posts/python/range-slider/2015-06-30-range-slider.html
@@ -18,16 +18,7 @@ order: 9
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<p>Now you can implement range sliders and selectors in your Plotly graphs with <b>python</b>!!!<br></p>
-
-</div>
-</div>
-</div>
-<div class="cell border-box-sizing text_cell rendered">
-<div class="prompt input_prompt">
-</div>
-<div class="inner_cell">
-<div class="text_cell_render border-box-sizing rendered_html">
+<h4>Now you can implement range sliders and selectors <br>in your Plotly graphs purely with <b>python</b>!!!</h4>
 <p>New to our python API?<br>
 Learn about API authentication here: <a href="https://plot.ly/python/getting-started">https://plot.ly/python/getting-started</a> <br>
 Find your api_key here: <a href="https://plot.ly/settings/api">https://plot.ly/settings/api</a></p>
@@ -169,7 +160,7 @@ Run  <code>pip install plotly --upgrade</code> to update your Plotly version</p>
 <div class="output_area"><div class="prompt output_prompt">Out[4]:</div>
 
 <div class="output_html rendered_html output_subarea output_execute_result">
-<iframe id="igraph" scrolling="no" style="border:none;" seamless="seamless" src="https://plot.ly/~chelsea_lyn/11579.embed" height="525px" width="100%"></iframe>
+<iframe id="igraph" scrolling="no" style="border:none;" seamless="seamless" src="https://plot.ly/~chelsea_lyn/11581.embed" height="525px" width="100%"></iframe>
 </div>
 
 </div>
