--- a/_posts/python/range-slider/2015-06-30-range-slider.html
+++ b/_posts/python/range-slider/2015-06-30-range-slider.html
@@ -1,5 +1,5 @@
 ---
-permalink: python/range-slider/
+permalink: python/range-slider
 description: Create graphs with range sliders and range selectors in Python with Plotly.
 title: Python Range Slider and Selectors | plotly
 has_thumbnail: true
@@ -18,7 +18,7 @@ order: 9
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<h4>Now you can implement range sliders and selectors <br>in your Plotly graphs purely with <b>python</b>!!!</h4>
+<h4>Now you can implement range sliders and selectors <br>in your Plotly graphs purely with python!</h4>
 <p>New to our python API?<br>
 Learn about API authentication here: <a href="https://plot.ly/python/getting-started">https://plot.ly/python/getting-started</a> <br>
 Find your api_key here: <a href="https://plot.ly/settings/api">https://plot.ly/settings/api</a></p>
@@ -33,7 +33,7 @@ Find your api_key here: <a href="https://plot.ly/settings/api">https://plot.ly/s
     <div class="input_area">
 <div class=" highlight hl-ipython2"><pre><span class="kn">import</span> <span class="nn">plotly</span>
 <span class="kn">import</span> <span class="nn">plotly.plotly</span> <span class="kn">as</span> <span class="nn">py</span>
-<span class="kn">import</span> <span class="nn">plotly.graph_objs</span> <span class="kn">as</span> <span class="nn">go</span>
+<span class="kn">import</span> <span class="nn">plotly.graph_objs</span> <span class="kn">as</span> <span class="nn">go</span> 
 
 <span class="n">plotly</span><span class="o">.</span><span class="n">__version__</span>
 </pre></div>
@@ -160,7 +160,7 @@ Run  <code>pip install plotly --upgrade</code> to update your Plotly version</p>
 <div class="output_area"><div class="prompt output_prompt">Out[4]:</div>
 
 <div class="output_html rendered_html output_subarea output_execute_result">
-<iframe id="igraph" scrolling="no" style="border:none;" seamless="seamless" src="https://plot.ly/~chelsea_lyn/11581.embed" height="525px" width="100%"></iframe>
+<iframe id="igraph" scrolling="no" style="border:none;" seamless="seamless" src="https://plot.ly/~chelsea_lyn/11583.embed" height="525px" width="100%"></iframe>
 </div>
 
 </div>
