--- a/_posts/python/WebGL/2015-06-30-webgl.html
+++ b/_posts/python/WebGL/2015-06-30-webgl.html
@@ -1,12 +1,13 @@
 ---
-permalink: python/webgl-vs-svg/
-description: Using WebGL with Scattergl() in Python with Plotly. Examples comparing WebGL scatter charts to SVG scatter charts in Python with Plotly.
+permalink: python/webgl-vs-svg
+description: Using WebGL with Scattergl() in Python with Plotly. Implement WebGL for increased speed, improved interactivity, and the ability to plot even more data!
 title: Python WebGL vs SVG | plotly
 has_thumbnail: true
-thumbnail: thumbnail/webgl.jpg
+thumbnail: /images/webgl.png
 layout: user-guide
 name: WebGL vs SVG
 language: python
+title: Python WebGL vs SVG | plotly
 display_as: chart_type
 has_thumbnail: true
 page_type: example_index
@@ -18,17 +19,8 @@ order: 1
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<h1 id="WebGL-vs-SVG-in-Python">WebGL vs SVG in Python<a class="anchor-link" href="#WebGL-vs-SVG-in-Python">&#182;</a></h1>
-</div>
-</div>
-</div>
-<div class="cell border-box-sizing text_cell rendered">
-<div class="prompt input_prompt">
-</div>
-<div class="inner_cell">
-<div class="text_cell_render border-box-sizing rendered_html">
-<p>Now in Ploty you can implement WebGL with <code>Scattergl()</code> in place of <code>Scatter()</code> <br>
-for increased speed, improved interactivity, and the ability to plot even more data!</p>
+<p>Learn about API authentication here: <a href="https://plot.ly/python/getting-started">https://plot.ly/python/getting-started</a> <br>
+Find your api_key here: <a href="https://plot.ly/settings/api">https://plot.ly/settings/api</a></p>
 
 </div>
 </div>
@@ -54,7 +46,7 @@ for increased speed, improved interactivity, and the ability to plot even more d
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&apos;1.8.12&apos;</pre>
+<pre>&apos;1.9.10&apos;</pre>
 </div>
 
 </div>
@@ -62,17 +54,6 @@ for increased speed, improved interactivity, and the ability to plot even more d
 </div>
 </div>
 
-</div>
-<div class="cell border-box-sizing text_cell rendered">
-<div class="prompt input_prompt">
-</div>
-<div class="inner_cell">
-<div class="text_cell_render border-box-sizing rendered_html">
-<p>Learn about API authentication here: <a href="https://plot.ly/python/getting-started">https://plot.ly/python/getting-started</a> <br>
-Find your api_key here: <a href="https://plot.ly/settings/api">https://plot.ly/settings/api</a></p>
-
-</div>
-</div>
 </div>
 <div class="cell border-box-sizing text_cell rendered">
 <div class="prompt input_prompt">
@@ -98,7 +79,7 @@ Find your api_key here: <a href="https://plot.ly/settings/api">https://plot.ly/s
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<h5 id="WebGL-with-100,000--points">WebGL with 100,000  points<a class="anchor-link" href="#WebGL-with-100,000--points">&#182;</a></h5>
+<h4 id="WebGL-with-100,000--points">WebGL with 100,000  points<a class="anchor-link" href="#WebGL-with-100,000--points">&#182;</a></h4>
 </div>
 </div>
 </div>
@@ -119,7 +100,7 @@ Find your api_key here: <a href="https://plot.ly/settings/api">https://plot.ly/s
     <span class="n">mode</span> <span class="o">=</span> <span class="s">&#39;markers&#39;</span><span class="p">,</span>
     <span class="n">marker</span> <span class="o">=</span> <span class="nb">dict</span><span class="p">(</span>
         <span class="n">line</span> <span class="o">=</span> <span class="nb">dict</span><span class="p">(</span>
-            <span class="n">width</span> <span class="o">=</span> <span class="mi">1</span><span class="p">,</span>
+            <span class="n">width</span> <span class="o">=</span> <span class="mi">1</span><span class="p">,</span> 
             <span class="n">color</span> <span class="o">=</span> <span class="s">&#39;#404040&#39;</span><span class="p">)</span>
     <span class="p">)</span>
 <span class="p">)</span>
@@ -260,7 +241,7 @@ Find your api_key here: <a href="https://plot.ly/settings/api">https://plot.ly/s
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<h3 id="Reference">Reference<a class="anchor-link" href="#Reference">&#182;</a></h3>
+<h4 id="Reference">Reference<a class="anchor-link" href="#Reference">&#182;</a></h4>
 </div>
 </div>
 </div>
