--- a/_posts/python/WebGL/2015-06-30-webgl.html
+++ b/_posts/python/WebGL/2015-06-30-webgl.html
@@ -1,9 +1,9 @@
 ---
 permalink: python/webgl-vs-svg
-description: Using WebGL with Scattergl() in Python with Plotly. Implement WebGL for increased speed, improved interactivity, and the ability to plot even more data!
-title: Python WebGL vs SVG | plotly
+description: Implement WebGL for increased speed, improved interactivity, and the ability to plot even more data!
+name: Python WebGL vs SVG | plotly
 has_thumbnail: true
-thumbnail: /images/webgl.png
+thumbnail: thumbnail/webgl.jpg
 layout: user-guide
 name: WebGL vs SVG
 language: python
@@ -119,7 +119,7 @@ Find your api_key here: <a href="https://plot.ly/settings/api">https://plot.ly/s
 <div class="output_area"><div class="prompt output_prompt">Out[2]:</div>
 
 <div class="output_html rendered_html output_subarea output_execute_result">
-<iframe id="igraph" scrolling="no" style="border:none;"seamless="seamless" src="https://plot.ly/~chelsea_lyn/8823.embed" height="525px" width="100%"></iframe>
+<iframe id="igraph" scrolling="no" style="border:none;" seamless="seamless" src="https://plot.ly/~chelsea_lyn/8823.embed" height="525px" width="100%"></iframe>
 </div>
 
 </div>
@@ -174,7 +174,7 @@ Find your api_key here: <a href="https://plot.ly/settings/api">https://plot.ly/s
 <div class="output_area"><div class="prompt output_prompt">Out[3]:</div>
 
 <div class="output_html rendered_html output_subarea output_execute_result">
-<iframe id="igraph" scrolling="no" style="border:none;"seamless="seamless" src="https://plot.ly/~chelsea_lyn/8817.embed" height="525px" width="100%"></iframe>
+<iframe id="igraph" scrolling="no" style="border:none;" seamless="seamless" src="https://plot.ly/~chelsea_lyn/8817.embed" height="525px" width="100%"></iframe>
 </div>
 
 </div>
@@ -194,7 +194,7 @@ Find your api_key here: <a href="https://plot.ly/settings/api">https://plot.ly/s
 </div>
 <div class="cell border-box-sizing code_cell rendered">
 <div class="input">
-<div class="prompt input_prompt">In&nbsp;[1]:</div>
+<div class="prompt input_prompt">In&nbsp;[4]:</div>
 <div class="inner_cell">
     <div class="input_area">
 <div class=" highlight hl-ipython2"><pre><span class="kn">import</span> <span class="nn">plotly.plotly</span> <span class="kn">as</span> <span class="nn">py</span>
@@ -224,10 +224,10 @@ Find your api_key here: <a href="https://plot.ly/settings/api">https://plot.ly/s
 <div class="output">
 
 
-<div class="output_area"><div class="prompt output_prompt">Out[1]:</div>
+<div class="output_area"><div class="prompt output_prompt">Out[4]:</div>
 
 <div class="output_html rendered_html output_subarea output_execute_result">
-<iframe id="igraph" scrolling="no" style="border:none;"seamless="seamless" src="https://plot.ly/~chelsea_lyn/8850.embed" height="525px" width="100%"></iframe>
+<iframe id="igraph" scrolling="no" style="border:none;" seamless="seamless" src="https://plot.ly/~chelsea_lyn/8850.embed" height="525px" width="100%"></iframe>
 </div>
 
 </div>
@@ -241,7 +241,7 @@ Find your api_key here: <a href="https://plot.ly/settings/api">https://plot.ly/s
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<h4 id="Reference">Reference<a class="anchor-link" href="#Reference">&#182;</a></h4>
+<h3 id="Reference">Reference<a class="anchor-link" href="#Reference">&#182;</a></h3>
 </div>
 </div>
 </div>
