--- a/_posts/python/WebGL/2015-06-30-webgl.html
+++ b/_posts/python/WebGL/2015-06-30-webgl.html
@@ -1,5 +1,5 @@
 ---
-permalink: python/webgl-vs-svg
+permalink: python/webgl-vs-svg/
 description: Implement WebGL for increased speed, improved interactivity, and the ability to plot even more data!
 name: Python WebGL vs SVG | plotly
 has_thumbnail: true
