--- a/_posts/python/range-slider/2015-06-30-range-slider.html
+++ b/_posts/python/range-slider/2015-06-30-range-slider.html
@@ -1,12 +1,13 @@
 ---
-permalink: python/range-slider
-description: Create graphs with range sliders and range selectors in Python with Plotly.
-title: Python Range Slider and Selectors | plotly
+permalink: python/range-slider/
+description: Now you can implement range sliders and selectors in your Plotly graphs purely with python!
+name: Python Range Slider and Selectors | plotly
 has_thumbnail: true
 thumbnail: thumbnail/sliders.jpg
 layout: user-guide
 name: Range Slider and Selector
 language: python
+title: Python Range Slider and Selectors | plotly
 display_as: chart_type
 has_thumbnail: true
 page_type: example_index
@@ -18,7 +19,6 @@ order: 9
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<h4>Now you can implement range sliders and selectors <br>in your Plotly graphs purely with python!</h4>
 <p>New to our python API?<br>
 Learn about API authentication here: <a href="https://plot.ly/python/getting-started">https://plot.ly/python/getting-started</a> <br>
 Find your api_key here: <a href="https://plot.ly/settings/api">https://plot.ly/settings/api</a></p>
@@ -75,7 +75,7 @@ Run  <code>pip install plotly --upgrade</code> to update your Plotly version</p>
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<h5 id="Import-Data">Import Data<a class="anchor-link" href="#Import-Data">&#182;</a></h5>
+<h5 id="Create-a-Graph-with-Range-Selectors-and-a-Range-Slider">Create a Graph with Range Selectors and a Range Slider<a class="anchor-link" href="#Create-a-Graph-with-Range-Selectors-and-a-Range-Slider">&#182;</a></h5>
 </div>
 </div>
 </div>
@@ -90,28 +90,8 @@ Run  <code>pip install plotly --upgrade</code> to update your Plotly version</p>
 <span class="n">df</span> <span class="o">=</span> <span class="n">web</span><span class="o">.</span><span class="n">DataReader</span><span class="p">(</span><span class="s">&quot;aapl&quot;</span><span class="p">,</span> <span class="s">&#39;yahoo&#39;</span><span class="p">,</span>
                     <span class="n">datetime</span><span class="p">(</span><span class="mi">2007</span><span class="p">,</span> <span class="mi">10</span><span class="p">,</span> <span class="mi">1</span><span class="p">),</span>
                     <span class="n">datetime</span><span class="p">(</span><span class="mi">2009</span><span class="p">,</span> <span class="mi">4</span><span class="p">,</span> <span class="mi">1</span><span class="p">))</span>
-</pre></div>
 
-</div>
-</div>
-</div>
-
-</div>
-<div class="cell border-box-sizing text_cell rendered">
-<div class="prompt input_prompt">
-</div>
-<div class="inner_cell">
-<div class="text_cell_render border-box-sizing rendered_html">
-<h5 id="Create-a-Graph-with-Range-Selectors-and-a-Range-Slider">Create a Graph with Range Selectors and a Range Slider<a class="anchor-link" href="#Create-a-Graph-with-Range-Selectors-and-a-Range-Slider">&#182;</a></h5>
-</div>
-</div>
-</div>
-<div class="cell border-box-sizing code_cell rendered">
-<div class="input">
-<div class="prompt input_prompt">In&nbsp;[4]:</div>
-<div class="inner_cell">
-    <div class="input_area">
-<div class=" highlight hl-ipython2"><pre><span class="n">trace</span> <span class="o">=</span> <span class="n">go</span><span class="o">.</span><span class="n">Scatter</span><span class="p">(</span><span class="n">x</span><span class="o">=</span><span class="n">df</span><span class="o">.</span><span class="n">index</span><span class="p">,</span>
+<span class="n">trace</span> <span class="o">=</span> <span class="n">go</span><span class="o">.</span><span class="n">Scatter</span><span class="p">(</span><span class="n">x</span><span class="o">=</span><span class="n">df</span><span class="o">.</span><span class="n">index</span><span class="p">,</span>
                    <span class="n">y</span><span class="o">=</span><span class="n">df</span><span class="o">.</span><span class="n">High</span><span class="p">)</span>
 
 <span class="n">data</span> <span class="o">=</span> <span class="p">[</span><span class="n">trace</span><span class="p">]</span>
@@ -157,10 +137,10 @@ Run  <code>pip install plotly --upgrade</code> to update your Plotly version</p>
 <div class="output">
 
 
-<div class="output_area"><div class="prompt output_prompt">Out[4]:</div>
+<div class="output_area"><div class="prompt output_prompt">Out[3]:</div>
 
 <div class="output_html rendered_html output_subarea output_execute_result">
-<iframe id="igraph" scrolling="no" style="border:none;" seamless="seamless" src="https://plot.ly/~chelsea_lyn/11583.embed" height="525px" width="100%"></iframe>
+<iframe id="igraph" scrolling="no" style="border:none;" seamless="seamless" src="https://plot.ly/~chelsea_lyn/11587.embed" height="525px" width="100%"></iframe>
 </div>
 
 </div>
