--- a/_posts/python/line_and_scatter/2015-06-30-scatter.html
+++ b/_posts/python/line_and_scatter/2015-06-30-scatter.html
@@ -19,7 +19,8 @@ order: 2
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<h5 id="New-to-Plotly's-Python-API?">New to Plotly's Python API?<a class="anchor-link" href="#New-to-Plotly's-Python-API?">&#182;</a></h5><p>Learn about API authentication here: <a href="https://plot.ly/python/getting-started">https://plot.ly/python/getting-started</a> <br>
+<h4 id="API-Authentication">API Authentication<a class="anchor-link" href="#API-Authentication">&#182;</a></h4><p>New to Plotly's python API? <br> 
+Learn about API authentication here: <a href="https://plot.ly/python/getting-started">https://plot.ly/python/getting-started</a> <br>
 Find your api_key here: <a href="https://plot.ly/settings/api">https://plot.ly/settings/api</a></p>
 
 </div>
@@ -36,7 +37,7 @@ Find your api_key here: <a href="https://plot.ly/settings/api">https://plot.ly/s
 </div>
 <div class="cell border-box-sizing code_cell rendered">
 <div class="input">
-<div class="prompt input_prompt">In&nbsp;[5]:</div>
+<div class="prompt input_prompt">In&nbsp;[1]:</div>
 <div class="inner_cell">
     <div class="input_area">
 <div class=" highlight hl-ipython2"><pre><span class="kn">import</span> <span class="nn">plotly.plotly</span> <span class="kn">as</span> <span class="nn">py</span>
@@ -72,7 +73,7 @@ Find your api_key here: <a href="https://plot.ly/settings/api">https://plot.ly/s
 <div class="output">
 
 
-<div class="output_area"><div class="prompt output_prompt">Out[5]:</div>
+<div class="output_area"><div class="prompt output_prompt">Out[1]:</div>
 
 <div class="output_html rendered_html output_subarea output_execute_result">
 <iframe id="igraph" scrolling="no" style="border:none;" seamless="seamless" src="https://plot.ly/~chelsea_lyn/9008.embed" height="525px" width="100%"></iframe>
@@ -95,7 +96,7 @@ Find your api_key here: <a href="https://plot.ly/settings/api">https://plot.ly/s
 </div>
 <div class="cell border-box-sizing code_cell rendered">
 <div class="input">
-<div class="prompt input_prompt">In&nbsp;[6]:</div>
+<div class="prompt input_prompt">In&nbsp;[2]:</div>
 <div class="inner_cell">
     <div class="input_area">
 <div class=" highlight hl-ipython2"><pre><span class="kn">import</span> <span class="nn">plotly.plotly</span> <span class="kn">as</span> <span class="nn">py</span>
@@ -143,7 +144,7 @@ Find your api_key here: <a href="https://plot.ly/settings/api">https://plot.ly/s
 <div class="output">
 
 
-<div class="output_area"><div class="prompt output_prompt">Out[6]:</div>
+<div class="output_area"><div class="prompt output_prompt">Out[2]:</div>
 
 <div class="output_html rendered_html output_subarea output_execute_result">
 <iframe id="igraph" scrolling="no" style="border:none;" seamless="seamless" src="https://plot.ly/~chelsea_lyn/9010.embed" height="525px" width="100%"></iframe>
@@ -166,7 +167,7 @@ Find your api_key here: <a href="https://plot.ly/settings/api">https://plot.ly/s
 </div>
 <div class="cell border-box-sizing code_cell rendered">
 <div class="input">
-<div class="prompt input_prompt">In&nbsp;[7]:</div>
+<div class="prompt input_prompt">In&nbsp;[3]:</div>
 <div class="inner_cell">
     <div class="input_area">
 <div class=" highlight hl-ipython2"><pre><span class="kn">import</span> <span class="nn">plotly.plotly</span> <span class="kn">as</span> <span class="nn">py</span>
@@ -226,7 +227,7 @@ Find your api_key here: <a href="https://plot.ly/settings/api">https://plot.ly/s
 <div class="output">
 
 
-<div class="output_area"><div class="prompt output_prompt">Out[7]:</div>
+<div class="output_area"><div class="prompt output_prompt">Out[3]:</div>
 
 <div class="output_html rendered_html output_subarea output_execute_result">
 <iframe id="igraph" scrolling="no" style="border:none;" seamless="seamless" src="https://plot.ly/~chelsea_lyn/9014.embed" height="525px" width="100%"></iframe>
@@ -249,7 +250,7 @@ Find your api_key here: <a href="https://plot.ly/settings/api">https://plot.ly/s
 </div>
 <div class="cell border-box-sizing code_cell rendered">
 <div class="input">
-<div class="prompt input_prompt">In&nbsp;[9]:</div>
+<div class="prompt input_prompt">In&nbsp;[4]:</div>
 <div class="inner_cell">
     <div class="input_area">
 <div class=" highlight hl-ipython2"><pre><span class="kn">import</span> <span class="nn">plotly.plotly</span> <span class="kn">as</span> <span class="nn">py</span>
@@ -374,7 +375,7 @@ Find your api_key here: <a href="https://plot.ly/settings/api">https://plot.ly/s
 <div class="output">
 
 
-<div class="output_area"><div class="prompt output_prompt">Out[9]:</div>
+<div class="output_area"><div class="prompt output_prompt">Out[4]:</div>
 
 <div class="output_html rendered_html output_subarea output_execute_result">
 <iframe id="igraph" scrolling="no" style="border:none;" seamless="seamless" src="https://plot.ly/~chelsea_lyn/9020.embed" height="525px" width="100%"></iframe>
@@ -397,7 +398,7 @@ Find your api_key here: <a href="https://plot.ly/settings/api">https://plot.ly/s
 </div>
 <div class="cell border-box-sizing code_cell rendered">
 <div class="input">
-<div class="prompt input_prompt">In&nbsp;[10]:</div>
+<div class="prompt input_prompt">In&nbsp;[5]:</div>
 <div class="inner_cell">
     <div class="input_area">
 <div class=" highlight hl-ipython2"><pre><span class="kn">import</span> <span class="nn">plotly.graph_objs</span> <span class="kn">as</span> <span class="nn">go</span>
@@ -428,7 +429,7 @@ Find your api_key here: <a href="https://plot.ly/settings/api">https://plot.ly/s
 <div class="output">
 
 
-<div class="output_area"><div class="prompt output_prompt">Out[10]:</div>
+<div class="output_area"><div class="prompt output_prompt">Out[5]:</div>
 
 <div class="output_html rendered_html output_subarea output_execute_result">
 <iframe id="igraph" scrolling="no" style="border:none;" seamless="seamless" src="https://plot.ly/~chelsea_lyn/9022.embed" height="525px" width="100%"></iframe>
@@ -451,7 +452,7 @@ Find your api_key here: <a href="https://plot.ly/settings/api">https://plot.ly/s
 </div>
 <div class="cell border-box-sizing code_cell rendered">
 <div class="input">
-<div class="prompt input_prompt">In&nbsp;[11]:</div>
+<div class="prompt input_prompt">In&nbsp;[6]:</div>
 <div class="inner_cell">
     <div class="input_area">
 <div class=" highlight hl-ipython2"><pre><span class="kn">import</span> <span class="nn">plotly.plotly</span> <span class="kn">as</span> <span class="nn">py</span>
@@ -540,7 +541,7 @@ Find your api_key here: <a href="https://plot.ly/settings/api">https://plot.ly/s
 <div class="output">
 
 
-<div class="output_area"><div class="prompt output_prompt">Out[11]:</div>
+<div class="output_area"><div class="prompt output_prompt">Out[6]:</div>
 
 <div class="output_html rendered_html output_subarea output_execute_result">
 <iframe id="igraph" scrolling="no" style="border:none;" seamless="seamless" src="https://plot.ly/~chelsea_lyn/9012.embed" height="600px" width="800px"></iframe>
@@ -574,7 +575,7 @@ for increased speed, improved interactivity, and the ability to plot even more d
 </div>
 <div class="cell border-box-sizing code_cell rendered">
 <div class="input">
-<div class="prompt input_prompt">In&nbsp;[12]:</div>
+<div class="prompt input_prompt">In&nbsp;[7]:</div>
 <div class="inner_cell">
     <div class="input_area">
 <div class=" highlight hl-ipython2"><pre><span class="kn">import</span> <span class="nn">plotly.plotly</span> <span class="kn">as</span> <span class="nn">py</span>
@@ -604,7 +605,7 @@ for increased speed, improved interactivity, and the ability to plot even more d
 <div class="output">
 
 
-<div class="output_area"><div class="prompt output_prompt">Out[12]:</div>
+<div class="output_area"><div class="prompt output_prompt">Out[7]:</div>
 
 <div class="output_html rendered_html output_subarea output_execute_result">
 <iframe id="igraph" scrolling="no" style="border:none;" seamless="seamless" src="https://plot.ly/~chelsea_lyn/9028.embed" height="525px" width="100%"></iframe>
@@ -630,7 +631,7 @@ for increased speed, improved interactivity, and the ability to plot even more d
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<p>See <a href="https://plot.ly/python/reference/#scatter">https://plot.ly/python/reference/#scatter</a> for more information</p>
+<p>See <a href="https://plot.ly/python/reference/#scatter">https://plot.ly/python/reference/#scatter</a> for more information and chart attribute options!</p>
 
 </div>
 </div>
