--- a/_posts/python/range-slider/2015-06-30-range-slider.html
+++ b/_posts/python/range-slider/2015-06-30-range-slider.html
@@ -19,9 +19,20 @@ order: 9
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<p>New to our python API?<br>
+<h4 id="API-Authentication">API Authentication<a class="anchor-link" href="#API-Authentication">&#182;</a></h4><p>New to Plotly's python API? <br> 
 Learn about API authentication here: <a href="https://plot.ly/python/getting-started">https://plot.ly/python/getting-started</a> <br>
 Find your api_key here: <a href="https://plot.ly/settings/api">https://plot.ly/settings/api</a></p>
+
+</div>
+</div>
+</div>
+<div class="cell border-box-sizing text_cell rendered">
+<div class="prompt input_prompt">
+</div>
+<div class="inner_cell">
+<div class="text_cell_render border-box-sizing rendered_html">
+<h4 id="Version-Check">Version Check<a class="anchor-link" href="#Version-Check">&#182;</a></h4><p>Note: range sliders and range selectors are available in version <b>1.9.7+</b><br>
+Run  <code>pip install plotly --upgrade</code> to update your Plotly version</p>
 
 </div>
 </div>
@@ -32,8 +43,6 @@ Find your api_key here: <a href="https://plot.ly/settings/api">https://plot.ly/s
 <div class="inner_cell">
     <div class="input_area">
 <div class=" highlight hl-ipython2"><pre><span class="kn">import</span> <span class="nn">plotly</span>
-<span class="kn">import</span> <span class="nn">plotly.plotly</span> <span class="kn">as</span> <span class="nn">py</span>
-<span class="kn">import</span> <span class="nn">plotly.graph_objs</span> <span class="kn">as</span> <span class="nn">go</span> 
 
 <span class="n">plotly</span><span class="o">.</span><span class="n">__version__</span>
 </pre></div>
@@ -64,18 +73,7 @@ Find your api_key here: <a href="https://plot.ly/settings/api">https://plot.ly/s
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<p>Note: range sliders and range selectors are available in version <b>1.9.7+</b><br>
-Run  <code>pip install plotly --upgrade</code> to update your Plotly version</p>
-
-</div>
-</div>
-</div>
-<div class="cell border-box-sizing text_cell rendered">
-<div class="prompt input_prompt">
-</div>
-<div class="inner_cell">
-<div class="text_cell_render border-box-sizing rendered_html">
-<h5 id="Create-a-Graph-with-Range-Selectors-and-a-Range-Slider">Create a Graph with Range Selectors and a Range Slider<a class="anchor-link" href="#Create-a-Graph-with-Range-Selectors-and-a-Range-Slider">&#182;</a></h5>
+<h4 id="Basic-Range-Selectors-and-a-Range-Slider">Basic Range Selectors and a Range Slider<a class="anchor-link" href="#Basic-Range-Selectors-and-a-Range-Slider">&#182;</a></h4>
 </div>
 </div>
 </div>
@@ -84,7 +82,10 @@ Run  <code>pip install plotly --upgrade</code> to update your Plotly version</p>
 <div class="prompt input_prompt">In&nbsp;[3]:</div>
 <div class="inner_cell">
     <div class="input_area">
-<div class=" highlight hl-ipython2"><pre><span class="kn">from</span> <span class="nn">datetime</span> <span class="kn">import</span> <span class="n">datetime</span>
+<div class=" highlight hl-ipython2"><pre><span class="kn">import</span> <span class="nn">plotly.plotly</span> <span class="kn">as</span> <span class="nn">py</span>
+<span class="kn">import</span> <span class="nn">plotly.graph_objs</span> <span class="kn">as</span> <span class="nn">go</span> 
+
+<span class="kn">from</span> <span class="nn">datetime</span> <span class="kn">import</span> <span class="n">datetime</span>
 <span class="kn">import</span> <span class="nn">pandas.io.data</span> <span class="kn">as</span> <span class="nn">web</span>
 
 <span class="n">df</span> <span class="o">=</span> <span class="n">web</span><span class="o">.</span><span class="n">DataReader</span><span class="p">(</span><span class="s">&quot;aapl&quot;</span><span class="p">,</span> <span class="s">&#39;yahoo&#39;</span><span class="p">,</span>
@@ -140,7 +141,7 @@ Run  <code>pip install plotly --upgrade</code> to update your Plotly version</p>
 <div class="output_area"><div class="prompt output_prompt">Out[3]:</div>
 
 <div class="output_html rendered_html output_subarea output_execute_result">
-<iframe id="igraph" scrolling="no" style="border:none;" seamless="seamless" src="https://plot.ly/~chelsea_lyn/11587.embed" height="525px" width="100%"></iframe>
+<iframe id="igraph" scrolling="no" style="border:none;" seamless="seamless" src="https://plot.ly/~chelsea_lyn/11593.embed" height="525px" width="100%"></iframe>
 </div>
 
 </div>
@@ -148,4 +149,14 @@ Run  <code>pip install plotly --upgrade</code> to update your Plotly version</p>
 </div>
 </div>
 
+</div>
+<div class="cell border-box-sizing text_cell rendered">
+<div class="prompt input_prompt">
+</div>
+<div class="inner_cell">
+<div class="text_cell_render border-box-sizing rendered_html">
+<h4 id="Reference">Reference<a class="anchor-link" href="#Reference">&#182;</a></h4><p>See <a href="https://plot.ly/python/reference/#layout-xaxis-rangeselector">https://plot.ly/python/reference/#layout-xaxis-rangeselector</a> <br>and <a href="https://plot.ly/python/reference/#layout-xaxis-rangeslider">https://plot.ly/python/reference/#layout-xaxis-rangeslider</a> <br>for more information and attribute options!</p>
+
+</div>
+</div>
 </div>{% endraw %}
