--- a/_posts/python/gauge-chart/2015-06-30-linear-gauge.html
+++ b/_posts/python/gauge-chart/2015-06-30-linear-gauge.html
@@ -1,16 +1,17 @@
 ---
 permalink: python/linear-gauge-chart/
-description: How to make interactive linear-guage charts in Python with Plotly.
-title: Python Linear-Gauge Chart | plotly
+description: How to make interactive linear-guage charts in Python with Plotly. 
+name: Python Linear-Gauge Chart | plotly
 has_thumbnail: true
 thumbnail: thumbnail/linear-gauge.jpg
 layout: user-guide
 name: Linear-Gauge-Chart
 language: python
+title: Python Linear-Gauge Chart | plotly
 display_as: chart_type
 has_thumbnail: true
 page_type: example_index
-order: 11
+order: 12
 ---
 {% raw %}
 <div class="cell border-box-sizing text_cell rendered">
@@ -18,18 +19,9 @@ order: 11
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<h1 id="Linear-Gauge-Charts-in-Python">Linear-Gauge Charts in Python<a class="anchor-link" href="#Linear-Gauge-Charts-in-Python">&#182;</a></h1>
-</div>
-</div>
-</div>
-<div class="cell border-box-sizing text_cell rendered">
-<div class="prompt input_prompt">
-</div>
-<div class="inner_cell">
-<div class="text_cell_render border-box-sizing rendered_html">
-<p>Learn about API authentication here: <a href="https://plot.ly/python/getting-started">https://plot.ly/python/getting-started</a> <br>
-Find your api_key here: <a href="https://plot.ly/settings/api">https://plot.ly/settings/api</a> <br>
-For more information about plotly figure attibutes, see: <a href="https://plot.ly/python/reference/">https://plot.ly/python/reference/</a></p>
+<h4 id="API-Authentication">API Authentication<a class="anchor-link" href="#API-Authentication">&#182;</a></h4><p>New to Plotly's python API? <br> 
+Learn about API authentication here: <a href="https://plot.ly/python/getting-started">https://plot.ly/python/getting-started</a> <br>
+Find your api_key here: <a href="https://plot.ly/settings/api">https://plot.ly/settings/api</a></p>
 
 </div>
 </div>
@@ -39,23 +31,14 @@ For more information about plotly figure attibutes, see: <a href="https://plot.l
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<h5 id="Create-the-Scales-for-the-Linear-Gauge-Charts">Create the Scales for the Linear-Gauge Charts<a class="anchor-link" href="#Create-the-Scales-for-the-Linear-Gauge-Charts">&#182;</a></h5>
-</div>
-</div>
-</div>
-<div class="cell border-box-sizing text_cell rendered">
-<div class="prompt input_prompt">
-</div>
-<div class="inner_cell">
-<div class="text_cell_render border-box-sizing rendered_html">
-<p>Note the following tutorial shows how to create a linear-gauge chart with 4 gauges. It's recommended to use a <code>width</code> between 600-1000px and <code>ticklen</code> should be <code>width/20</code>. These variables are definied in the code below.</p>
+<h4 id="Linear-Gauge-Chart-Shell">Linear-Gauge Chart Shell<a class="anchor-link" href="#Linear-Gauge-Chart-Shell">&#182;</a></h4><p>Note the following tutorial shows how to create a linear-gauge chart with 4 gauges. It's recommended to use a <code>width</code> between 600-1000px and <code>ticklen</code> should be <code>width/20</code>. These variables are definied in the code below.</p>
 
 </div>
 </div>
 </div>
 <div class="cell border-box-sizing code_cell rendered">
 <div class="input">
-<div class="prompt input_prompt">In&nbsp;[4]:</div>
+<div class="prompt input_prompt">In&nbsp;[2]:</div>
 <div class="inner_cell">
     <div class="input_area">
 <div class=" highlight hl-ipython2"><pre><span class="kn">from</span> <span class="nn">plotly</span> <span class="kn">import</span> <span class="n">tools</span>
@@ -135,9 +118,8 @@ For more information about plotly figure attibutes, see: <a href="https://plot.l
 
 <span class="c">### ADD RATING DATA HERE ###</span>
 
-<span class="c">#fig = dict(data=traces, layout=layout)</span>
-<span class="c">#py.iplot(fig, filename=&#39;linear-gauge-layout&#39;)</span>
-<span class="nb">range</span><span class="p">(</span><span class="nb">len</span><span class="p">(</span><span class="n">scale_labels</span><span class="p">[</span><span class="n">i</span><span class="p">]))</span>
+<span class="n">fig</span> <span class="o">=</span> <span class="nb">dict</span><span class="p">(</span><span class="n">data</span><span class="o">=</span><span class="n">traces</span><span class="p">,</span> <span class="n">layout</span><span class="o">=</span><span class="n">layout</span><span class="p">)</span>
+<span class="n">py</span><span class="o">.</span><span class="n">iplot</span><span class="p">(</span><span class="n">fig</span><span class="p">,</span> <span class="n">filename</span><span class="o">=</span><span class="s">&#39;linear-gauge-layout&#39;</span><span class="p">)</span>
 </pre></div>
 
 </div>
@@ -148,11 +130,10 @@ For more information about plotly figure attibutes, see: <a href="https://plot.l
 <div class="output">
 
 
-<div class="output_area"><div class="prompt output_prompt">Out[4]:</div>
+<div class="output_area"><div class="prompt output_prompt">Out[2]:</div>
 
-
-<div class="output_text output_subarea output_execute_result">
-<pre>[0, 1, 2, 3, 4, 5, 6]</pre>
+<div class="output_html rendered_html output_subarea output_execute_result">
+<iframe id="igraph" scrolling="no" style="border:none;" seamless="seamless" src="https://plot.ly/~chelsea_lyn/10253.embed" height="600px" width="800px"></iframe>
 </div>
 
 </div>
@@ -166,14 +147,14 @@ For more information about plotly figure attibutes, see: <a href="https://plot.l
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<h5 id="Add-Rating-Data">Add Rating Data<a class="anchor-link" href="#Add-Rating-Data">&#182;</a></h5><p>Ratings should be scaled between 0 - 6 to fit the y-values of the scales created above.</p>
+<h4 id="Add-Rating-Data">Add Rating Data<a class="anchor-link" href="#Add-Rating-Data">&#182;</a></h4><p>Ratings should be scaled between 0 - 6 to fit the y-values of the scales created above.</p>
 
 </div>
 </div>
 </div>
 <div class="cell border-box-sizing code_cell rendered">
 <div class="input">
-<div class="prompt input_prompt">In&nbsp;[6]:</div>
+<div class="prompt input_prompt">In&nbsp;[3]:</div>
 <div class="inner_cell">
     <div class="input_area">
 <div class=" highlight hl-ipython2"><pre><span class="n">ratings</span> <span class="o">=</span> <span class="p">[</span><span class="mf">4.5</span><span class="p">,</span> <span class="mi">5</span><span class="p">,</span> <span class="mi">1</span><span class="p">,</span> <span class="mf">2.75</span><span class="p">]</span>
@@ -198,10 +179,10 @@ For more information about plotly figure attibutes, see: <a href="https://plot.l
 <div class="output">
 
 
-<div class="output_area"><div class="prompt output_prompt">Out[6]:</div>
+<div class="output_area"><div class="prompt output_prompt">Out[3]:</div>
 
 <div class="output_html rendered_html output_subarea output_execute_result">
-<iframe id="igraph" scrolling="no" style="border:none;"seamless="seamless" src="https://plot.ly/~chelsea_lyn/10255.embed" height="600px" width="800px"></iframe>
+<iframe id="igraph" scrolling="no" style="border:none;" seamless="seamless" src="https://plot.ly/~chelsea_lyn/10255.embed" height="600px" width="800px"></iframe>
 </div>
 
 </div>
@@ -209,4 +190,14 @@ For more information about plotly figure attibutes, see: <a href="https://plot.l
 </div>
 </div>
 
+</div>
+<div class="cell border-box-sizing text_cell rendered">
+<div class="prompt input_prompt">
+</div>
+<div class="inner_cell">
+<div class="text_cell_render border-box-sizing rendered_html">
+<h4 id="Reference">Reference<a class="anchor-link" href="#Reference">&#182;</a></h4><p>See <a href="https://plot.ly/python/reference/">https://plot.ly/python/reference/</a> for more information and chart attribute options!</p>
+
+</div>
+</div>
 </div>{% endraw %}
