--- a/_posts/python/line-plots/2015-06-30-lines.html
+++ b/_posts/python/line-plots/2015-06-30-lines.html
@@ -1,5 +1,5 @@
 ---
-permalink: python/line-charts
+permalink: python/line-charts/
 description: How to make line charts in Python with Plotly. Examples on creating and styling line charts in Python with Plotly.
 name: Python Line Charts | plotly
 has_thumbnail: true
