--- a/404.html
+++ b/404.html
@@ -21,7 +21,7 @@ title: Plot Twist
 
 {% include _new/_page-components/_header-main.html %}
 
-<main class="--page page--single --index">
+<main class="--page page--single --index not-found">
 
     <div class="--wrap">
         <!-- aside - Main Sidebar-->
