replaced permalinks for old/new streaming-tutorials

--- a/_posts/user_guide_python/2015-05-27-streaming-tutorial.html
+++ b/_posts/user_guide_python/2015-05-27-streaming-tutorial.html
@@ -1,5 +1,5 @@
 ---
-permalink: python/streaming-tutorial/
+<!--permalink: python/streaming-tutorial/-->
 description: How to create python graphs that update online in real-time.
 name: Streaming | Python User Guide | Plotly
 layout: user-guide
