changed the thumbnail link

--- a/_posts/user_guide_python/2015-06-30-python_streaming.html
+++ b/_posts/user_guide_python/2015-06-30-python_streaming.html
@@ -3,7 +3,7 @@ permalink: python/streaming-tutorial/
 description: Getting Started with Plotly Streaming
 title: Getting Started with Plotly Streaming
 has_thumbnail: true
-thumbnail: http://images.plot.ly/plotly-documentation/thumbnail/streaming-thumb-square.gif
+thumbnail: thumbnail/streaming-thumb-square.gif
 layout: user-guide
 name: Getting Started with Streaming
 language: python
