changed some redirects as well as other redirect froms

--- a/_posts/user_guide_python/old_user_guide/2015-05-27-3d-plots-tutorial.html
+++ b/_posts/user_guide_python/old_user_guide/2015-05-27-3d-plots-tutorial.html
@@ -8,7 +8,9 @@ language: python
 page_type: u-guide
 has_thumbnail: false
 ---
-
+  <script>
+    window.location = "https://plot.ly/python/#3d-charts";
+  </script>
 
    <div class="cell border-box-sizing text_cell rendered">
     <div class="prompt input_prompt">
