--- a/_posts/user_guide_python/old_user_guide/2015-05-27-histograms-and-box-plots-tutorial.html
+++ b/_posts/user_guide_python/old_user_guide/2015-05-27-histograms-and-box-plots-tutorial.html
@@ -9,6 +9,9 @@ page_type: u-guide
 has_thumbnail: false
 ---
 
+   <script>
+   window.location="https://plot.ly/python/#statistical-charts";
+   </script>
 
    <div class="cell border-box-sizing text_cell rendered">
     <div class="prompt input_prompt">
