--- a/_posts/user_guide_python/old_user_guide/2015-05-27-matplotlib-to-plotly-tutorial.html
+++ b/_posts/user_guide_python/old_user_guide/2015-05-27-matplotlib-to-plotly-tutorial.html
@@ -9,7 +9,10 @@ page_type: u-guide
 has_thumbnail: false
 ---
 
-
+   <script>
+   window.location="https://plot.ly/matplotlib/";
+   </script>
+   
    <div class="cell border-box-sizing text_cell rendered">
     <div class="prompt input_prompt">
     </div>
