--- a/_posts/python/bar/2015-04-09-bar_python_index.html
+++ b/_posts/python/bar/2015-04-09-bar_python_index.html
@@ -10,6 +10,7 @@ page_type: example_index
 has_thumbnail: true
 display_as: basic
 order: 4
+redirect_from: /python/bar-charts-tutorial/
 ---
 {% assign examples = site.posts | where:"language","python" | where:"suite","bar" | sort: "order" %}
 {% include auto_examples.html examples=examples %}
