--- a/_posts/python/bubble/2015-04-09-bubble_python_index.html
+++ b/_posts/python/bubble/2015-04-09-bubble_python_index.html
@@ -10,6 +10,7 @@ page_type: example_index
 has_thumbnail: true
 display_as: basic
 order: 3
+redirect_from: /python/bubble-charts-tutorial/
 ---
 {% assign examples = site.posts | where:"language","python" | where:"suite","bubble" | sort: "order" %}
 {% include auto_examples.html examples=examples %}
