--- a/_posts/python/heatmap/2015-04-09-heatmap_python_index.html
+++ b/_posts/python/heatmap/2015-04-09-heatmap_python_index.html
@@ -10,6 +10,7 @@ page_type: example_index
 has_thumbnail: true
 display_as: scientific
 order: 3
+redirect_from: /python/heatmaps-contours-and-2dhistograms-tutorial/
 ---
 {% assign examples = site.posts | where:"language","python" | where:"suite","heatmap" | sort: "order" %}
 {% include auto_examples.html examples=examples %}
