--- a/_posts/python/3d-camera-controls/2015-06-30-3d-camera-controls.html
+++ b/_posts/python/3d-camera-controls/2015-06-30-3d-camera-controls.html
@@ -1,6 +1,6 @@
 ---
 permalink: python/3d-camera-controls/
-description: How to control Camera in your 3D Charts in Python with Plotly.
+description: How to Control the Camera in your 3D Charts in Python with Plotly.
 name: Python 3D Camera Controls | plotly
 has_thumbnail: true
 thumbnail: thumbnail/3d-camera-controls.jpg
@@ -354,4 +354,23 @@ order: 14
 </div>
 </div>
 
+</div>
+<div class="cell border-box-sizing text_cell rendered">
+<div class="prompt input_prompt">
+</div>
+<div class="inner_cell">
+<div class="text_cell_render border-box-sizing rendered_html">
+<h4 id="Reference">Reference<a class="anchor-link" href="#Reference">&#182;</a></h4>
+</div>
+</div>
+</div>
+<div class="cell border-box-sizing text_cell rendered">
+<div class="prompt input_prompt">
+</div>
+<div class="inner_cell">
+<div class="text_cell_render border-box-sizing rendered_html">
+<p>See <a href="https://plot.ly/python/reference/#layout-scene-camera">https://plot.ly/python/reference/#layout-scene-camera</a> for more information and chart attribute options!</p>
+
+</div>
+</div>
 </div>{% endraw %}
