--- a/_posts/python/3d-scatter/2015-06-30-3d_scatter.html
+++ b/_posts/python/3d-scatter/2015-06-30-3d_scatter.html
@@ -1,5 +1,5 @@
 ---
-permalink: python/3d-scatter-plots
+permalink: python/3d-scatter-plots/
 description: How to make 3D scatter plots in Python with Plotly.
 title: 3D Python Scatter Plots | plotly
 has_thumbnail: true
